--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,26 +10,26 @@ pipeline {
         stage('Verify Ingress') {
             steps {
                 // Verify Ingress resource exists
-                sh 'kubectl get ingress/my-app-ingress'
+                sh 'kubectl get ingress/my-app-ingress -n my-namespace'
             }
         }
         stage('Patch Ingress') {
             steps {
                 // Patch ingress resource to point to green service
-                sh 'kubectl patch ingress/my-app-ingress --type=merge --patch-file patch-green.json'
+                sh 'kubectl patch ingress/my-app-ingress -n my-namespace --type=merge --patch-file patch-green.json'
             }
         }
         stage('Verify Green') {
             steps {
                 // Verify green environment is working correctly
-                sh 'kubectl get deployments -l environment=green'
+                sh 'kubectl get deployments -l environment=green -n my-namespace'
             }
         }
         stage('Rollback to Blue') {
             steps {
                 // Update ingress resource to point to blue service in case of failure
                 catchError {
-                    sh 'kubectl patch ingress/my-app-ingress --type=merge --patch-file patch-blue.json'
+                    sh 'kubectl patch ingress/my-app-ingress -n my-namespace --type=merge --patch-file patch-blue.json'
                 }
             }
         }
@@ -37,7 +37,7 @@ pipeline {
     post {
         failure {
             // Automatically revert to blue environment in case of failure
-            sh 'kubectl patch ingress/my-app-ingress --type=merge --patch-file patch-blue.json'
+            sh 'kubectl patch ingress/my-app-ingress -n my-namespace --type=merge --patch-file patch-blue.json'
         }
     }
 }
