--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,43 +1,36 @@
 pipeline {
     agent any
+
     stages {
-        stage('Deploy to Green') {
+        stage('Create Namespace') {
             steps {
-                // Deploy to green environment
-                sh 'kubectl apply -f green-deployment.yaml'
+                sh 'kubectl create namespace dev-namespace'
             }
         }
-        stage('Verify Ingress') {
+        stage('Create Ingress') {
             steps {
-                // Verify Ingress resource exists
-                sh 'kubectl get ingress/my-app-ingress -n my-namespace'
+                sh 'kubectl apply -f ingress.yaml -n dev-namespace'
             }
         }
         stage('Patch Ingress') {
             steps {
-                // Patch ingress resource to point to green service
-                sh 'kubectl patch ingress/my-app-ingress -n my-namespace --type=merge --patch-file patch-green.json'
+                sh 'kubectl patch ingress/my-app-ingress -n dev-namespace --type=merge --patch-file patch.json'
             }
         }
         stage('Verify Green') {
             steps {
-                // Verify green environment is working correctly
-                sh 'kubectl get deployments -l environment=green -n my-namespace'
+                sh 'kubectl get ingress/my-app-ingress -n dev-namespace'
             }
         }
         stage('Rollback to Blue') {
             steps {
-                // Update ingress resource to point to blue service in case of failure
-                catchError {
-                    sh 'kubectl patch ingress/my-app-ingress -n my-namespace --type=merge --patch-file patch-blue.json'
-                }
+                sh 'kubectl patch ingress/my-app-ingress -n dev-namespace --type=merge --patch-file patch-blue.json'
             }
         }
     }
     post {
         failure {
-            // Automatically revert to blue environment in case of failure
-            sh 'kubectl patch ingress/my-app-ingress -n my-namespace --type=merge --patch-file patch-blue.json'
+            sh 'kubectl patch ingress/my-app-ingress -n dev-namespace --type=merge --patch-file patch-blue.json'
         }
     }
 }
